--- a/foundry.toml
+++ b/foundry.toml
@@ -5,4 +5,6 @@ libs = ["lib"]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
 
-remappings = ["openzeppelin-contracts/=lib/openzeppelin-contracts/contracts/"]
+# remappings = [
+#   "openzeppelin-contracts/=lib/openzeppelin-contracts/contracts/"
+# ]
